<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_label"/>

    <EditText
        android:id="@+id/card_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/answer_label"/>
    <EditText
        android:id="@+id/card_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/starred_label"/>

    <CheckBox
        android:id="@+id/card_starred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starred_label"/>

    <Button
    android:id="@+id/stats_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="24dp"
    android:text ="@string/card_stats"/>
</LinearLayout>